K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandsservice
  template:
    metadata:
      labels:
        app: commandsservice
    spec:
      containers:
        - name: commandsservice
          image: pradeepdevananth/commandsservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandsservice
  ports:
  - name: commandsservice
    protocol: TCP
    port: 80
    targetPort: 80


# kubectl version
# kubectl apply -f .\commands-depl.yaml
# kubectl get deployments
# kubectl get pods
# kubectl delete deployment commands-depl
# kubectl delete pod --all
# kubectl delete deployment --all

# To force redeploy and take latest image
# kubectl rollout restart deployment commands-depl
