K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: pradeepdevananth/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
# For gRPC
  - name: platformgrpc
    protocol: TCP
    port: 666
    targetPort: 666



# kubectl version
# kubectl apply -f .\platforms-depl.yaml
# kubectl get deployments
# kubectl get pods
# kubectl delete deployment platforms-depl
# kubectl delete pod --all
# kubectl delete deployment --all

# To force redeploy and take latest image
# kubectl rollout restart deployment platforms-depl
