K8S/rabbitmq-depl.yaml
# Kubectl apply -f rabbitmq-depl.yaml
# goto http://localhost:15672/
# username - guest
# password - guest

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rebbitmq
  template:
    metadata:
      labels:
        app: rebbitmq
    spec:
      containers:
        - name: rebbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rbmq-mgmt-port
            - containerPort: 5672
              name: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rebbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: rebbitmq
  ports:
  - name: rbmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rbmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rebbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rebbitmq
  ports:
  - name: rbmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rbmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
